# fastapi-authx-sqladmin

./: .gitignore  .pre-commit-config.yaml  README.MD  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: admin.py  alembic.ini  config.py  dependencies.py  main.py  models.py  postgres.py
app/accounts/: auth.py  home.py  router.py
app/alembic/: env.py
app/alembic/versions/: 16e36c4a37f4_account_profile.py  1a9ec8f4fa07_accounts_profile.py  3c07471f4cc4_blocked_refresh_tokens.py  b33f68adc216_optional_blocked.py  d32266c691b5_auth_user.py  f1617980465d_refresh_token_lenght.py
docker/: lms.Dockerfile  lms_pg.Dockerfile
