[project]
name = "template"
version = "0.1.0"
description = "fastapi template"
readme = "README.MD"
dependencies = [
    'ruff',
    'pre-commit',

    'environs', 
    'pytz',
    'passlib',

    'fastapi',
    'uvicorn',
    'pydantic',
    'pydantic-settings',
    'python-multipart',
    'email-validator',

    'psycopg2-binary',
    'SQLAlchemy',
    'alembic',
    'sqladmin',

    'loguru',

    'authx',
    'itsdangerous',
]
